--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,34 @@ body {
 h1 {
 	font-weight:900;
 }
+
+#canvas {
+  background-color: white;
+  border:1px solid rgba(0,0,0,.1);
+}
+
+#status {
+  color: #000;
+  position: absolute;
+  cursor: default;
+  font-family: Helvetica, Verdana, sans-serif;
+  font-weight: bold;
+  margin: 10px;
+  top: 30px;
+}
+
+#controls {
+  background-color: #AAAAAA;
+  position: absolute;
+  font-family: Helvetica, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: smaller;
+  padding: 3px;
+  width: 594px;
+  height: 25px;
+}
+
+select {
+  font-family: monospace;
+  font-size: medium;
+}
