--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 * {
 font-family:"Roboto";
-font-smoothing:"antialiased";
+-webkit-font-smoothing:"antialiased" !important;
 }
 
 html {
@@ -17,7 +17,7 @@ background-image: radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #ee
 	}
 
 body {
-	padding:100px;
+	
 	background: none !important;
 }
 
@@ -30,32 +30,62 @@ h1 {
 }
 
 #canvas {
-  background-color: white;
+ 
   border:1px solid rgba(0,0,0,.1);
+  position:fixed;
+  top:0;
+  bottom:0;
+  right:0;
+  left:0;
+  min-height:100%;
+  min-width:100%;
+  z-index:0;
 }
 
 #status {
-  color: #000;
+  color: #666;
   position: absolute;
   cursor: default;
-  font-family: Helvetica, Verdana, sans-serif;
-  font-weight: bold;
-  margin: 10px;
-  top: 30px;
+  
+  font-weight: 400;
+  
+  top: 60px;
+
+ 
 }
 
+img#photo-chat {
+	position:fixed;
+	bottom:50px;
+	width:150px;
+	border-radius:2px;
+	right:10px;
+	z-index:-1;
+	border:1px solid rgba(0,0,0,.1);
+}
+
+/*
 #controls {
-  background-color: #AAAAAA;
+  background-color: rgba(255,255,255,.5);
+  border-top:1px solid rgba(0,0,0,.05);
   position: absolute;
   font-family: Helvetica, Verdana, sans-serif;
   font-weight: bold;
   font-size: smaller;
-  padding: 3px;
-  width: 594px;
-  height: 25px;
+  position:fixed;
+  bottom:0px;
+  left:0;
+  padding:10px 20px 0px;
+  right:0;
+  z-index:1;
 }
 
+*/
 select {
   font-family: monospace;
   font-size: medium;
+}
+
+.container {
+
 }
