--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,26 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,200,600,500,700,800);
+
+
 
 * {
-font-family:"Roboto";
+font-family:"Roboto" !important;
 -webkit-font-smoothing:"antialiased" !important;
 }
 
 html {
-	height:100%;
-	width:100%;
-	background-image: #f7f8f9;
-background-image: -webkit-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-background-image: -moz-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-background-image: -o-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-background-image: -ms-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-background-image: radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    height:100%;
+    width:100%;
+    background-image: #f7f8f9;
+    background-image: -webkit-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    background-image: -moz-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    background-image: -o-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    background-image: -ms-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    background-image: radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
+    background:white;
 	}
 
 body {
-	
 	background: none !important;
 }
 
@@ -27,6 +30,12 @@ body {
 
 h1 {
 	font-weight:900;
+}
+
+.brand {
+  font-family: "Raleway" !important;
+  color:white;
+  font-weight:800 !important;
 }
 
 #canvas {
@@ -43,49 +52,117 @@ h1 {
 }
 
 #status {
-  color: #666;
+  color: #ccc;
   position: absolute;
   cursor: default;
-  
-  font-weight: 400;
-  
-  top: 60px;
-
- 
+  font-weight: 100;
+  top: 90px;
+  font-size:20px;
 }
 
 img#photo-chat {
 	position:fixed;
-	bottom:50px;
-	width:150px;
-	border-radius:2px;
+	bottom:70px;
+	width:170px;
+	border-radius:3px;
 	right:10px;
 	z-index:-1;
-	border:1px solid rgba(0,0,0,.1);
+  box-shadow:0 0 3px rgba(0,0,0,.1);
+	border:1px solid rgba(0,0,0,.2);
 }
 
-/*
-#controls {
-  background-color: rgba(255,255,255,.5);
-  border-top:1px solid rgba(0,0,0,.05);
-  position: absolute;
-  font-family: Helvetica, Verdana, sans-serif;
-  font-weight: bold;
-  font-size: smaller;
-  position:fixed;
-  bottom:0px;
-  left:0;
-  padding:10px 20px 0px;
-  right:0;
-  z-index:1;
+
+
+
+.navbar-fixed-top .container {
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
-*/
+.navbar-fixed-bottom .navbar-inner {
+  background:rgba(240,240,240,.8);
+  box-shadow:none !important;
+}
+
+.bottom-bar {
+  padding-top:7px;
+  padding-bottom:5px;
+}
+
+.bottom-bar li {
+  margin-right:25px;
+  font-size:11px;
+}
+
+.bottom-bar select {
+  margin-top:5px;
+}
+
+.bottom-bar input,
+.bottom-bar select {
+  font-size:11px !important;
+  margin-left:5px;
+}
+.btn {
+  
+  -moz-border-radius: 2px;
+-o-border-radius: 2px;
+-webkit-border-radius: 2px;
+  font-size:11px !important;
+  text-transform:uppercase;
+background-image:none;
+
+
+}
+
 select {
-  font-family: monospace;
-  font-size: medium;
+  background:none;
+
 }
 
-.container {
+.btn-danger, .btn-danger:hover {
+  background-color: #d14836;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#d14836));
+background-image: -webkit-linear-gradient(top,#dd4b39,#d14836);
+background-image: -moz-linear-gradient(top,#dd4b39,#d14836);
+background-image: -ms-linear-gradient(top,#dd4b39,#d14836);
+background-image: -o-linear-gradient(top,#dd4b39,#d14836);
+background-image: linear-gradient(top,#dd4b39,#d14836);
+border: 1px solid #c13828;
+-moz-border-radius: 2px;
+-o-border-radius: 2px;
+-webkit-border-radius: 2px;
+border-radius: 2px;
+display: block;
+-webkit-transition:none;
+}
 
+
+.btn-primary, .btn-primary:hover {
+-webkit-align-items: flex-start;
+-webkit-appearance: none;
+-webkit-user-select: none;
+-webkit-writing-mode: horizontal-tb;
+background-color: rgb(77, 144, 254);
+
+
+background-image: -webkit-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+background-image: -moz-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+background-image: -ms-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+background-image: -o-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+background-image: linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+-webkit-transition:none;
+border-color: rgb(48, 121, 237);
+border-style: solid;
+border-width: 1px;
+
+
+
+}
+
+.question {
+  font-size:16px;
+
+  -webkit-font-smoothing:antialiased !important;
+}
 }
