--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,9 @@ img#photo-chat {
 }
 
 
-
+.navbar-fixed-top {
+  border-left:5px solid rgb(77, 144, 254);
+}
 
 .navbar-fixed-top .container {
   padding-top:10px;
@@ -82,6 +84,7 @@ img#photo-chat {
 .navbar-fixed-bottom .navbar-inner {
   background:rgba(240,240,240,.8);
   box-shadow:none !important;
+
 }
 
 .bottom-bar {
