--- a/css/style.css
+++ b/css/style.css
@@ -229,11 +229,36 @@ canvas:active {
     cursor:default;
 }
 
-.question {
+.l {
+  font-weight:400;
+  color:white;
+  font-size:11px;
+
+  margin-left:15px;
+  margin-right:2px;
+}
+
+b {
+font-weight:900;
+}
+
+.btn-none, .btn-none:hover, .btn-none:active {
+  background:none;
+  box-shadow:none;
+  border:1px solid #333;
+  text-shadow:none;
+  color:#ccc;
+  cursor:default;
+}
+
+.question  {
   font-size:16px;
 
   -webkit-font-smoothing:antialiased !important;
 }
+
+
+
 
 #user-list {
   position:fixed;
@@ -247,6 +272,7 @@ canvas:active {
   border-bottom:1px solid white;
   background:#eee;
   padding:5px;
+  cursor:pointer;
 }
 
 .user-cell-id {
@@ -260,4 +286,10 @@ canvas:active {
 .user-cell-name {
   font-size:14px;
   font-weight:700;
+}
+
+
+.enabled-user {
+  background:darkGreen !important;
+  color:white;
 }
