--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 
 * {
-font-family:"Roboto" !important;
+font-family:"ARIAL" !important;
 -webkit-font-smoothing:"antialiased" !important;
 }
 
@@ -289,6 +289,16 @@ font-weight:900;
   font-weight:700;
 }
 
+/* iphone */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  img { max-width: 100%; }
+  
+}
+
+/* nexus 7 or ipad */
+@media only screen and (min-width : 768px) and (max-width : 1024px) {
+  img { max-width: 100%; }
+}
 
 .enabled-user {
   background:darkGreen !important;
