--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ font-family:"ARIAL" !important;
 -webkit-font-smoothing:"antialiased" !important;
 }
 
+
 html {
     height:100%;
     width:100%;
@@ -31,6 +32,7 @@ form {
 
 .container {
 	background:none;
+  width:1200px !important;
 }
 
 h1 {
@@ -77,13 +79,17 @@ h3 {
 }
 
 #video-chat {
-  position:fixed;
   bottom:60px;
   right:10px;
+  position:absolute;
   z-index:2;
   width:170px;
   opacity:1;
-  -webkit-transition:opacity 0.2s;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
 }
 
 #video-chat:hover {
@@ -289,16 +295,29 @@ font-weight:900;
   font-weight:700;
 }
 
-/* iphone */
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+
+@media only screen and  (max-width : 1250px) {
+  .container {width:900px !important;}
+  #video-chat {width:10%;}
+}
+
+
+
+@media only screen and  (max-width : 870px) {
   img { max-width: 100%; }
+  .question {display:none !important;}
+  .container {width:95% !important;}
+  .buttontext {display:none !important;}
+}
+
+
+@media only screen and (max-width : 650px) {
+  img { max-width: 100%  }
+  .btn-none {display:none !important;}
+  #video-chat {width:50px}
   
 }
 
-/* nexus 7 or ipad */
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-  img { max-width: 100%; }
-}
 
 .enabled-user {
   background:darkGreen !important;
