--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,15 @@ h3 {
   font-weight:800 !important;
 }
 
+.alert {
+  z-index:99;
+  position:absolute;
+  top:50px;
+}
+
 .canvas {
- 
 
   position:fixed;
-  top:0;
   bottom:0;
   right:0;
   left:0;
@@ -192,43 +196,52 @@ select {
 
 
 .btn-danger, .btn-danger:hover {
-  background-color: #d14836;
-background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#d14836));
-background-image: -webkit-linear-gradient(top,#dd4b39,#d14836);
-background-image: -moz-linear-gradient(top,#dd4b39,#d14836);
-background-image: -ms-linear-gradient(top,#dd4b39,#d14836);
-background-image: -o-linear-gradient(top,#dd4b39,#d14836);
-background-image: linear-gradient(top,#dd4b39,#d14836);
-border: 1px solid #c13828;
--moz-border-radius: 2px;
--o-border-radius: 2px;
--webkit-border-radius: 2px;
-border-radius: 2px;
-text-transform:uppercase;
-display: block;
--webkit-transition:none;
+      background-color: #d14836;
+      background-image: -webkit-gradient(linear,left top,left bottom,from(#dd4b39),to(#d14836));
+      background-image: -webkit-linear-gradient(top,#dd4b39,#d14836);
+      background-image: -moz-linear-gradient(top,#dd4b39,#d14836);
+      background-image: -ms-linear-gradient(top,#dd4b39,#d14836);
+      background-image: -o-linear-gradient(top,#dd4b39,#d14836);
+      background-image: linear-gradient(top,#dd4b39,#d14836);
+      border: 1px solid #c13828;
+      -moz-border-radius: 2px;
+      -o-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      text-transform:uppercase;
+      display: block;
+      -webkit-transition:none .1s !important;
 }
 
 
-.btn-primary, .btn-primary:hover {
--webkit-align-items: flex-start;
--webkit-appearance: none;
--webkit-user-select: none;
--webkit-writing-mode: horizontal-tb;
-background-color: rgb(77, 144, 254);
+.btn-primary, .btn-primary:hover, .btn-primary.active {
+      -webkit-align-items: flex-start;
+      -webkit-appearance: none;
+      -webkit-user-select: none;
+      -webkit-writing-mode: horizontal-tb;
+      background-color: rgb(77, 144, 254);
+      background-image: -webkit-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -moz-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -ms-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -o-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
+      -webkit-transition:none;
+      border-color: rgb(48, 121, 237);
+      border-style: solid;
+      border-width: 1px;
+      margin:5px 0 !important;
+      text-transform:uppercase;
+      -webkit-transition:width .1s !important;
+}
 
+.btn-primary.active {
 
-background-image: -webkit-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
-background-image: -moz-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
-background-image: -ms-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
-background-image: -o-linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
-background-image: linear-gradient(top,rgb(77, 144, 254),rgb(71, 135, 237));
--webkit-transition:none;
-border-color: rgb(48, 121, 237);
-border-style: solid;
-border-width: 1px;
-margin:5px 0 !important;
-text-transform:uppercase;
+        border-color:rgba(255,255,255,.01) !important;
+        background-image: -webkit-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -moz-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -ms-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: -o-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
+      background-image: linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
 }
 
 canvas:active {
@@ -303,7 +316,7 @@ font-weight:900;
 
 
 
-@media only screen and  (max-width : 870px) {
+@media only screen and  (max-width : 900px) {
   img { max-width: 100%; }
   .question {display:none !important;}
   .container {width:95% !important;}
@@ -320,6 +333,6 @@ font-weight:900;
 
 
 .enabled-user {
-  background:darkGreen !important;
+  background:rgb(77, 144, 254) !important;
   color:white;
 }
