--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,12 @@ select {
       -webkit-transition:width .1s !important;
 }
 
+.user-cell-title {
+  font-size:13px;
+  margin-left:5px;
+  font-weight:bold;
+}
+
 .btn-primary.active {
 
         border-color:rgba(255,255,255,.01) !important;
