--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ h3 {
 
 .navbar-fixed-top {
   border-left:5px solid rgb(77, 144, 254);
-
+-webkit-app-region: drag;
 }
 
 .navbar-fixed-top .container {
