--- a/css/style.css
+++ b/css/style.css
@@ -1,313 +1,279 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900);
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,200,600,500,700,800);
 
-
-
 * {
-font-family:"Roboto" !important;
-font-smoothing:"antialiased" !important;
--webkit-font-smoothing:"antialiased" !important;
--moz-font-smoothing:"antialiased" !important;
--o-font-smoothing:"antialiased" !important;
-
+      font-family:"Roboto" !important;
+      font-smoothing:"antialiased" !important;
+      -webkit-font-smoothing:"antialiased" !important;
+      -moz-font-smoothing:"antialiased" !important;
+      -o-font-smoothing:"antialiased" !important;
 }
 
-
 html {
-    height:100%;
-    width:100%;
-    background-image: #f7f8f9;
-    background-image: -webkit-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-    background-image: -moz-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-    background-image: -o-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-    background-image: -ms-radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-    background-image: radial-gradient(50% 50%, circle farthest-side, #ffffff 0%, #eef0f2 100%);
-    background:white;
-	}
+      height:100%;
+      width:100%;
+      background:white;
+}
 
 body {
-	background: none !important;
+      background: none !important;
 }
 
 form {
-  padding:0;
-  margin:0;
+      padding:0;
+      margin:0;
 }
 
 .container {
-	background:none;
-  width:100% !important;
+      background:none;
+      width:100% !important;
 }
 
 .icon-user {
-  margin-top: 3px;
-margin-left: 6px;
+      margin-top: 3px;
+      margin-left: 6px;
+}
 
+.enabled-user {
+      background:rgb(77, 144, 254) !important;
+      color:white;
 }
 
 h1 {
-	font-weight:900;
-  font-family:"Roboto" !important;
-font-smoothing:"antialiased" !important;
--webkit-font-smoothing:"antialiased" !important;
--moz-font-smoothing:"antialiased" !important;
--o-font-smoothing:"antialiased" !important;
-}
-
-.hidden {
-  display:none;
-}
-
-.windowbutton {
-  float:left;
-  padding:13px 12px 6px ;
-  cursor:pointer;
-  opacity:0.7;
-}
-
-.windowbutton:hover {
-  opacity:1;
+      font-weight:900;
+      font-family:"Roboto" !important;
+      font-smoothing:"antialiased" !important;
+      -webkit-font-smoothing:"antialiased" !important;
+      -moz-font-smoothing:"antialiased" !important;
+      -o-font-smoothing:"antialiased" !important;
 }
 
 h3 {
-    padding:10px;
-    font-size:20px;
-    font-weight:700 !important;
-    font-family: "Raleway" !important;
-font-smoothing:"antialiased" !important;
--webkit-font-smoothing:"antialiased" !important;
--moz-font-smoothing:"antialiased" !important;
--o-font-smoothing:"antialiased" !important;
+      padding:10px;
+      font-size:20px;
+      font-weight:700 !important;
+      font-family: "Raleway" !important;
+      font-smoothing:"antialiased" !important;
+      -webkit-font-smoothing:"antialiased" !important;
+      -moz-font-smoothing:"antialiased" !important;
+      -o-font-smoothing:"antialiased" !important;
 }
 
+.hidden {
+      display:none;
+}
 
+.windowbutton {
+      float:left;
+      padding:13px 12px 6px ;
+      cursor:pointer;
+      opacity:0.7;
+}
 
+.windowbutton:hover {
+      opacity:1;
+}
 
 .brand {
-  font-family: "Raleway" !important;
-  color:white !important;
-  opacity:1 !important;
-  font-weight:600 !important;
-font-smoothing:"antialiased" !important;
--webkit-font-smoothing:"antialiased" !important;
--moz-font-smoothing:"antialiased" !important;
--o-font-smoothing:"antialiased" !important;
-text-shadow:1px solid black;
-padding: 10px 20px 10px 7px !important;
-margin:0 !important;
+      font-family: "Raleway" !important;
+      color:white !important;
+      opacity:1 !important;
+      font-weight:600 !important;
+      font-smoothing:"antialiased" !important;
+      -webkit-font-smoothing:"antialiased" !important;
+      -moz-font-smoothing:"antialiased" !important;
+      -o-font-smoothing:"antialiased" !important;
+      text-shadow:1px solid black;
+      padding: 10px 20px 10px 7px !important;
+      margin:0 !important;
 }
 
 .alert {
-  z-index:99;
-  position:absolute;
-  top:50px;
+      z-index:99;
+      position:absolute;
+      top:50px;
 }
 
 .canvas {
-
-  position:fixed;
-  bottom:0;
-  right:0;
-  left:0;
-  min-height:100%;
-  min-width:100%;
-  z-index:-1;
+      position:fixed;
+      bottom:0;
+      right:0;
+      left:0;
+      min-height:100%;
+      min-width:100%;
+      z-index:-1;
 }
 
 #status {
-  color: #ccc;
-  position: absolute;
-  cursor: default;
-  font-weight: 100 !important;
-  top: 90px;
-  left:30px;
-  font-size:16px;
+      color: #ccc;
+      position: absolute;
+      cursor: default;
+      font-weight: 100 !important;
+      top: 90px;
+      left:30px;
+      font-size:16px;
 }
-
-
 
 #video-chat-wrapper {
-  position:absolute;width:290px;height:220px;bottom:0;right:0;
+      position:absolute;
+      width:290px;
+      height:220px;
+      bottom:0;
+      right:0;
 }
 
-
-
 video {
-  height:auto;
-  border:2px solid white;
-  position:absolute;
+      height:auto;
+      border:2px solid white;
+      position:absolute;
 }
 
 #localVideo {
-  width:100px;
-  z-index:3;
-  visibility: hidden;
-  margin-top:15px;
+      width:100px;
+      z-index:3;
+      visibility: hidden;
+      margin-top:15px;
 }
 
 #remotes {
- 
-overflow: hidden;
-
+      overflow: hidden;
 }
 
 #remotes video {
-  width:210px;
-  margin-left:70px;
-  z-index:2;
+      width:210px;
+      margin-left:70px;
+      z-index:2;
 }
-
-
 
 .modal.fade.in {
-top: 20%;
+      top: 20%;
 }
 
-
-.navbar-fixed-top button  {
-  opacity:1; 
-    transition: opacity 1s;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  -o-transition:opacity  1s;
+#bar-top button  {
+      opacity:1; 
+      transition: opacity 1s;
+      -webkit-transition: opacity 1s;
+      -moz-transition: opacity 1s;
+      -ms-transition: opacity 1s;
+      -o-transition:opacity 1s;
 }
 
-.not-logged-in .navbar-fixed-top button {
-  opacity:0; 
+.not-logged-in #bar-top button {
+      opacity:0; 
 }
 
-
-.bottom-bar .container *,
-.bottom-bar .container *,
- {
-  
+#bar-bottom {
+      opacity:1; 
+      transition: opacity 1s;
+      -webkit-transition: opacity 1s;
+      -moz-transition: opacity 1s;
+      -ms-transition: opacity 1s;
+      -o-transition:opacity  1s;
 }
 
-.navbar-fixed-bottom {
-  opacity:1; 
-    transition: opacity 1s;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  -o-transition:opacity  1s;
+.not-logged-in #bar-bottom {
+      opacity:0; 
 }
-
-.not-logged-in .navbar-fixed-bottom {
-  opacity:0; 
-}
-
-
 
 .navbar {
-z-index:99999999;
+      z-index:99999999;
 }
 
-.navbar-fixed-top {
-  border-left:5px solid rgb(77, 144, 254);
-
--webkit-app-region: drag;
-
+#bar-top {
+      border-left:5px solid rgb(77, 144, 254);
+      -webkit-app-region: drag;
 }
 
-.navbar-fixed-top .container {
-  padding-top:10px;
-  padding-bottom:10px;
+#bar-top .container {
+      padding-top:10px;
+      padding-bottom:10px;
 }
 
 .navbar-inner {
-  padding-left:10px !important;
-  padding-right:10px !important;
+      padding-left:10px !important;
+      padding-right:10px !important;
 }
 
-.navbar-fixed-top .navbar-inner {
-  box-shadow: inset 0 1px 1px rgba(255,255,255,.1);
-  border-bottom:1px solid black;
+#bar-top  .navbar-inner {
+      box-shadow: inset 0 1px 1px rgba(255,255,255,.1);
+      border-bottom:1px solid black;
 }
 
-.navbar-fixed-bottom .navbar-inner {
-  background:rgba(240,240,240,.8);
-  box-shadow:none !important;
-
+#bar-bottom  .navbar-inner {
+      background:rgba(240,240,240,.8);
+      box-shadow:none !important;
 }
 
 .bottom-bar {
-  padding-top:10px;
-  padding-bottom:12px;
-
+      padding-top:10px;
+      padding-bottom:12px;
 }
 
 .navbar li {
-  margin-right:5px !important;
-  margin-left:5px;
-  font-size:12px;
+      margin-right:5px !important;
+      margin-left:5px;
+      font-size:12px;
 }
 
 .select {
-  margin-left:5px !important;
-  font-size:10px !important;
-  margin-top:5px;
-  margin-right:2px;
+      margin-left:5px !important;
+      font-size:10px !important;
+      margin-top:5px;
+      margin-right:2px;
 }
 
-.bottom-bar input,
-.bottom-bar select {
-  font-size:11px !important;
+#bar-bottom input,
+#bar-bottom select {
+      font-size:11px !important;
 }
 
 .btn-group {
-  margin-top:0px !important;
+      margin-top:0px !important;
 }
 
 .btn,  select {
-    font-weight:700;
-    -moz-border-radius: 2px;
-    -o-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    font-size:11px !important;
-    -webkit-font-smoothing:"antialiased" !important;
-    -webkit-appearance: none;
-    -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;
-    background-color: rgb(245, 245, 245);
-    background-image: none;
-    background-repeat: repeat-x;
-    border-bottom-color: rgb(179, 179, 179);
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-left-color: rgba(0, 0, 0, 0.0980392);
-    border-left-style: solid;
-    border-left-width: 1px;
-    border-right-color: rgba(0, 0, 0, 0.0980392);
-    border-right-style: solid;
-    border-right-width: 1px;
-    border-top-color: rgba(0, 0, 0, 0.0980392);
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    border-top-style: solid;
-    border-top-width: 1px;
-    box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;
-    line-height: 20px;
-    margin: 0px !important;
-    padding-bottom: 4px;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 4px;
-    text-align: center;
-    text-indent: 0px;
-    outline:none !important;
-
-
-
+      font-weight:700;
+      -moz-border-radius: 2px;
+      -o-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      font-size:11px !important;
+      -webkit-font-smoothing:"antialiased" !important;
+      -webkit-appearance: none;
+      -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;
+      background-color: rgb(245, 245, 245);
+      background-image: none;
+      background-repeat: repeat-x;
+      border-bottom-color: rgb(179, 179, 179);
+      border-bottom-left-radius: 2px;
+      border-bottom-right-radius: 2px;
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
+      border-left-color: rgba(0, 0, 0, 0.0980392);
+      border-left-style: solid;
+      border-left-width: 1px;
+      border-right-color: rgba(0, 0, 0, 0.0980392);
+      border-right-style: solid;
+      border-right-width: 1px;
+      border-top-color: rgba(0, 0, 0, 0.0980392);
+      border-top-left-radius: 2px;
+      border-top-right-radius: 2px;
+      border-top-style: solid;
+      border-top-width: 1px;
+      box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;
+      line-height: 20px;
+      margin: 0px !important;
+      padding-bottom: 4px;
+      padding-left: 12px;
+      padding-right: 12px;
+      padding-top: 4px;
+      text-align: center;
+      text-indent: 0px;
+      outline:none !important;
 }
 
 select {
-  background:white;
-
+      background:white;
 }
-
-
 
 .btn-danger, .btn-danger:hover {
       background-color: #d14836;
@@ -349,15 +315,14 @@ select {
 }
 
 .user-cell-title {
-  font-size:13px;
-  margin-left:5px;
-  font-weight:bold;
+      font-size:13px;
+      margin-left:5px;
+      font-weight:bold;
 }
 
 .btn-primary.active {
-
-        border-color:rgba(255,255,255,.01) !important;
-        background-image: -webkit-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
+      border-color:rgba(255,255,255,.01) !important;
+      background-image: -webkit-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
       background-image: -moz-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
       background-image: -ms-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
       background-image: -o-linear-gradient(bottom,rgb(77, 144, 254),rgb(71, 135, 237));
@@ -365,168 +330,189 @@ select {
 }
 
 canvas:active {
-    cursor:default;
+      cursor:default;
 }
 
 .l {
-  font-weight:400;
-  color:white;
-  font-size:11px;
-
-  margin-left:15px;
-  margin-right:2px;
+      font-weight:400;
+      color:white;
+      font-size:11px;
+      margin-left:15px;
+      margin-right:2px;
 }
 
 b {
-font-weight:900;
+      font-weight:900;
 }
 
-.modal {
-  
-}
-
-.btn-none, .btn-none:hover, .btn-none:active {
-  background:none;
-  box-shadow:none;
-  border:1px solid #333;
-  text-shadow:none;
-  color:#ccc;
-  cursor:default;
+.btn-none, 
+.btn-none:hover, 
+.btn-none:active {
+      background:none;
+      box-shadow:none;
+      border:1px solid #333;
+      text-shadow:none;
+      color:#ccc;
+      cursor:default;
 }
 
 .question  {
-  font-size:16px;
-
-  -webkit-font-smoothing:antialiased !important;
+      font-size:16px;
+      -webkit-font-smoothing:antialiased !important;
 }
 
 #question-text {
-  font-weight: 400;
-  font-size: 16px !important;
+      font-weight: 400;
+      font-size: 16px !important;
 }
 
 
 #user-list {
-  position:fixed;
-  top:80px;
-  right:0;
-  width:200px;
-  
+      position:fixed;
+      top:80px;
+      right:0;
+      width:200px;
 }
 
 .user-cell {
-  border-bottom:1px solid white;
-  background:#eee;
-  padding:5px;
-  cursor:pointer;
-  border-radius:2px 0 0 2px;
+      border-bottom:1px solid white;
+      background:#eee;
+      padding:5px;
+      cursor:pointer;
+      border-radius:2px 0 0 2px;
 }
 
 .user-cell-id {
-  font-size:11px;
-  font-weight:400;
-  text-transform:uppercase;
-  width:20px;
-  padding:5px;
+      font-size:11px;
+      font-weight:400;
+      text-transform:uppercase;
+      width:20px;
+      padding:5px;
 }
 
 .user-cell-name {
-  font-size:13px;
-  font-weight:600;
+      font-size:13px;
+      font-weight:600;
 }
 
 #status {
-  display:block;
+      display:block;
 }
 
 
-@media only screen and  (max-width : 1250px) {
-
- 
-}
-
-
-
+/* Everything below width of 900px */
 @media only screen and  (max-width : 900px) {
-  img { max-width: 100%; }
-  .question {}
-  .container {width:100% !important;}
+      img { 
+            max-width: 100%; 
+      }
 
+      .container {
+            width:100% !important;
+      }
 }
 
+
+/* Everything below width of 750px */
 @media only screen and  (max-width : 750px) {
-
-  .buttontext {display:none !important;}
+      .buttontext {
+            display:none !important;
+      }
 }
 
 
+/* Everything below width of 665px */
 @media only screen and (max-width : 665px) {
-  img { max-width: 100%  }
-  .btn-none {display:none !important;}
-  #status {display:none;}
-  .container {
-    padding-top:5px !important;
-    padding-bottom:5px !important;
-  }
+      img { 
+            max-width: 100%  
+      }
+
+      .btn-none {
+            display:none !important;
+      }
+
+      #status {
+            display:none;
+      }
+
+      .container {
+            padding-top:5px !important;
+            padding-bottom:5px !important;
+      }
 }
 
+
+/* Everything below width of 585px (Mobile Version) */
 @media only screen and (max-width : 585px) {
-.modal {
-  position:absolute;
-  width:100%;
+      
+      .modal {
+            position:absolute;
+            width:100%;
+            top:0px !important;
+            margin:0 !important;
+            z-index:999999999999999999;
+            left:0%;
+            border-radius:0;
+      }
 
-  top:0px !important;
-  margin:0 !important;
-z-index:999999999999999999;
-  left:0%;
-  border-radius:0;
+      video {
+            width:100px;
+      }
+
+      .modal-body {
+            max-height:none;
+      }
+
+      label {
+            display:none;
+      }
+
+      .controls {
+            margin:auto !important;
+      }
+
+      .select {
+            display:none;
+      }
+
+      .segment { 
+            float:left; 
+            padding:5px 0px; 
+            border-radius:0; 
+            width:50%; 
+            text-align:center;
+      }
+
+      h6 {
+            display:none;
+      }
+
+      .user-cell-title { 
+            margin-left:0px; 
+      }
+
+      #user-list { 
+            position: fixed;
+            top: 51px;
+            left: 0;
+            right: 0;
+            width:100%;
+      }
+
+      input {
+            padding:10px !important
+      }
+
+      .modal button {
+            padding:10px 25px !important
+      }
 }
 
-video {
-  width:100px;
-}
-
-.modal-body {
-  max-height:none;
-}
 
 
-
-label {
-  display:none;
-}
-
-.controls {
-  margin:auto !important;
-}
-
-  .select {display:None;}
-  .segment { float:left; padding:5px 0px; border-radius:0; width:50%; text-align:center;}
-  h6 {display:none;}
-  .user-cell-title { margin-left:0px; }
-  #user-list { position: fixed;
-top: 51px;
-left: 0;
-right: 0;
-width:100%;}
-
-input {
-  padding:10px !important
-}
-
-.modal button {
-  padding:10px 25px !important
-}
-}
-
-
-
+/* Everything below width of 460px (Mobile Version) */
 @media only screen and (max-width : 460px) {
-  select {display:None;}
+      select {
+            display:None;
+      }
 }
 
-
-.enabled-user {
-  background:rgb(77, 144, 254) !important;
-  color:white;
-}
