--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,13 @@ video {
       z-index:2;
 }
 
+#input-question {
+      width: 100%;
+      height: 100%;
+      box-shadow: none;
+      border: none;
+}
+
 .modal.fade.in {
       top: 20%;
 }
@@ -332,6 +339,8 @@ select {
 canvas:active {
       cursor:default;
 }
+
+
 
 .l {
       font-weight:400;
