--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,16 @@ h3 {
       -o-font-smoothing:"antialiased" !important;
 }
 
+i {
+      margin-top:-1px !important;
+      margin-right:1px;
+}
+
+nav ul {
+      padding:0 !important;
+      margin:0 !important;
+}
+
 .hidden {
       display:none;
 }
@@ -269,10 +279,10 @@ video {
       box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;
       line-height: 20px;
       margin: 0px !important;
-      padding-bottom: 4px;
+      padding-bottom: 3px;
       padding-left: 12px;
       padding-right: 12px;
-      padding-top: 4px;
+      padding-top: 5px;
       text-align: center;
       text-indent: 0px;
       outline:none !important;
